--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # Built binaries
 qotd_server
+qotd_8ball
+qotd_fortune
 qotd-8ball
 qotd-fortune-cowsay
+qotd-fortune
 
 # Nix build artifacts
 result
